# reify

./: .envrc  .gitattributes  .gitignore  .jcodemunch.jsonc  .mcp.json  CLAUDE.md  Cargo.toml  README.md  cat  environment.yml  fused-memory-config.yaml  librust_out.rlib  measurements-cold.json  measurements-warm.json  orchestrator-config.yaml  orchestrator.yaml  probe-d.json  rust-toolchain.toml
crates/reify-ast/: Cargo.toml
crates/reify-ast/src/: ast.rs  decl.rs  lib.rs
crates/reify-ast/tests/: api_surface.rs  api_surface_decl.rs  dag_invariant.rs
crates/reify-audit/: Cargo.toml
crates/reify-audit/src/: fused_memory_client.rs  jcodemunch_client.rs  lib.rs  p1_producer_orphan.rs  p2_consumer_stub.rs  p5_phantom_done.rs  pdead_dead_code.rs  pdssentinel.rs  player.rs  ptodo.rs  puntested.rs
crates/reify-audit/tests/: audit_integration.rs  baseline_report_freshness.rs  cli.rs  engine_seam_g_allow_cites_live.rs  engine_seam_orphans_g_allow.rs  g_allow.rs  g_allow_repo_wide_advisory.rs  g_allow_repo_wide_hard_gate.rs  jcodemunch_live.rs  new_orphans_2026_05_16_g_allow.rs  new_orphans_2026_05_18_g_allow.rs  new_orphans_2026_05_30_g_allow.rs  new_orphans_2026_06_02_g_allow.rs  new_orphans_2026_06_09_g_allow.rs  p1.rs  p2.rs  p5.rs  pdead.rs  pdssentinel.rs  player.rs  ptodo.rs  ptodo_baseline.rs  puntested.rs  real_git_ops.rs
crates/reify-cli/: Cargo.toml  build.rs
crates/reify-cli/src/: cache.rs  dev.rs  main.rs  mcp_context.rs
crates/reify-cli/tests/: cli_affine_eval.rs  cli_auto_type_param_select.rs  cli_build.rs  cli_build_3mf.rs  cli_build_3mf_coating.rs  cli_build_fea.rs  cli_build_outputs.rs  cli_build_verbose.rs  cli_cache.rs  cli_check.rs  cli_check_cfg.rs  cli_check_cfg_example.rs  cli_check_parametric_rate.rs  cli_check_parametric_vec3.rs  cli_check_variant_construction.rs  cli_datum_projection_check.rs  cli_determinacy_gate.rs  cli_determinacy_intrinsics.rs  cli_dfm_overhang.rs  cli_dfm_thickness.rs  cli_doc.rs  cli_eval_auto_resolve.rs  cli_eval_data_carrying_enum.rs  cli_eval_geometry.rs  cli_eval_shell_no_tet_warning.rs  cli_explain.rs  cli_gdt_conformance.rs  cli_gdt_integration_gate.rs  cli_gdt_legality.rs  cli_gdt_zones_eval.rs  cli_generate_eval.rs  cli_generics_eval.rs  cli_gui.rs  cli_imported_field_eval.rs  cli_inspect_node.rs  cli_integration_smoke.rs  cli_kernel_registry.rs  cli_keyed_eval.rs  cli_keyed_forall.rs  cli_lsp.rs  (+25 more)
crates/reify-compiler/: Cargo.toml
crates/reify-compiler/src/: ambient_defaults.rs  analysis_signatures.rs  annotations.rs  arg_check.rs  auto_type_param.rs  builtin_signatures.rs  cfg.rs  coerce.rs  conformance.rs  connect.rs  constants.rs  containment_graph.rs  datum_projection.rs  diagnostics.rs  entity.rs  expr.rs  forall_elaborate.rs  functions.rs  geometry.rs  geometry_arg_check.rs  geometry_boolean.rs  geometry_curve.rs  geometry_modify.rs  geometry_traits.rs  geometry_traits_inference.rs  geometry_transform.rs  guards.rs  ice.rs  joint_self_check.rs  joint_signatures.rs  lib.rs  list_helpers.rs  math_signatures.rs  module_dag.rs  module_pragmas.rs  prelude_context.rs  relation_signatures.rs  scc.rs  scope.rs  si_units.rs  (+11 more)
crates/reify-compiler/stdlib/: analysis.ri  constitutive.ri  determinacy_purposes.ri  dynamics.ri  fdm.ri  fdm_as_printed.ri  fdm_correlations.ri  fdm_slice.ri  fea.ri  fea_multi_case.ri  fea_types.ri  fields.ri  flexures.ri  flexures_types.ri  geometry_traits.ri  io.ri  joints.ri  kinematic.ri  materials_appearance.ri  materials_chemical.ri  materials_electrical.ri  materials_fea.ri  materials_mechanical.ri  materials_optical.ri  materials_thermal.ri  modal_analysis.ri  modal_analysis_fns.ri  modal_mechanism_fns.ri  option_recovery.ri  ports.ri  ports_electrical.ri  ports_fluid.ri  ports_mechanical.ri  ports_thermal.ri  process.ri  solver_buckling.ri  solver_buckling_fns.ri  solver_elastic.ri  stackup.ri  standard_stock.ri  (+7 more)
crates/reify-compiler/tests/: ad_hoc_selector_compile_tests.rs  affine_algebra_typing_tests.rs  affine_composition_order_tests.rs  affine_constructor_typing_tests.rs  alias_dfs_diagnostic_tests.rs  ambient_default_injection_tests.rs  ambient_default_material_integration_gate.rs  analysis_stress_fn_compile.rs  and_or_operand_guard_tests.rs  anisotropic_bar_example_tests.rs  annotation_compile_tests.rs  annotation_materialization_args_tests.rs  annotation_schema_registry_parity.rs  assoc_type_projection_reduction_tests.rs  auto_backjumping_real_source.rs  auto_fallback_soundness.rs  (+260 more)
crates/reify-config/: Cargo.toml  build.rs
crates/reify-constraints/: Cargo.toml  build.rs
crates/reify-core/: Cargo.toml
crates/reify-doc/: Cargo.toml
crates/reify-doc-build/: Cargo.toml
crates/reify-eval/: Cargo.toml  build.rs
crates/reify-expr/: Cargo.toml
crates/reify-fdm/: Cargo.toml
crates/reify-geometry/: Cargo.toml
crates/reify-ir/: Cargo.toml
crates/reify-kernel-fidget/: Cargo.toml
crates/reify-kernel-gmsh/: Cargo.toml  build.rs
crates/reify-kernel-manifold/: Cargo.toml
crates/reify-kernel-occt/: Cargo.toml  build.rs
crates/reify-kernel-openvdb/: Cargo.toml  build.rs
crates/reify-lsp/: Cargo.toml
crates/reify-mcp/: Cargo.toml
crates/reify-mesh-morph/: Cargo.toml
crates/reify-runtime/: Cargo.toml
crates/reify-shell-extract/: Cargo.toml
crates/reify-solver-elastic/: Cargo.toml  build.rs
crates/reify-stdlib/: Cargo.toml
crates/reify-syntax/: Cargo.toml
crates/reify-test-support/: Cargo.toml
tree-sitter-reify/: .gitignore  .npmrc  Cargo.toml  build.rs  grammar.js  package-lock.json  package.json
tree-sitter-reify/src/: .grammar_hash.stamp  grammar.json  lib.rs  node-types.json  parser.c  parser.c.bak  scanner.c
tree-sitter-reify/tests/: aux_at_grammar_tests.rs  build_logic_tests.rs  default_declaration_grammar_tests.rs  enum_named_field_grammar_tests.rs  enum_type_param_grammar_tests.rs  function_type_grammar_tests.rs  imaginary_literal_grammar_tests.rs  joint_with_grammar_tests.rs  priv_grammar_tests.rs  relate_at_auto_grammar_tests.rs  shell_channels_grammar_gate.rs  spec_purpose_example_grammar.rs  trait_member_annotation_grammar_tests.rs
(+2760 files in other folders)
