[workspace]
resolver = "2"
members = [
    "crates/reify-types",
    "crates/reify-expr",
    "crates/reify-syntax",
    "crates/reify-compiler",
    "crates/reify-eval",
    "crates/reify-constraints",
    "crates/reify-doc",
    "crates/reify-doc-build",
    "crates/reify-geometry",
    "crates/reify-kernel-fidget",
    "crates/reify-kernel-manifold",
    "crates/reify-kernel-occt",
    "crates/reify-config",
    "crates/reify-runtime",
    "crates/reify-stdlib",
    "crates/reify-lsp",
    "crates/reify-mcp",
    "crates/reify-cli",
    "crates/reify-test-support",
    "tree-sitter-reify",
    "gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
reify-types = { path = "crates/reify-types" }
reify-expr = { path = "crates/reify-expr" }
reify-syntax = { path = "crates/reify-syntax" }
reify-compiler = { path = "crates/reify-compiler" }
reify-eval = { path = "crates/reify-eval" }
reify-constraints = { path = "crates/reify-constraints" }
reify-doc = { path = "crates/reify-doc" }
reify-doc-build = { path = "crates/reify-doc-build" }
reify-geometry = { path = "crates/reify-geometry" }
reify-kernel-fidget = { path = "crates/reify-kernel-fidget" }
reify-kernel-manifold = { path = "crates/reify-kernel-manifold" }
reify-kernel-occt = { path = "crates/reify-kernel-occt" }
reify-config = { path = "crates/reify-config" }
reify-runtime = { path = "crates/reify-runtime" }
reify-stdlib = { path = "crates/reify-stdlib" }
reify-lsp = { path = "crates/reify-lsp" }
reify-mcp = { path = "crates/reify-mcp" }
reify-test-support = { path = "crates/reify-test-support" }

xxhash-rust = { version = "0.8", features = ["xxh3"] }

im = "15"
indexmap = "2"
inventory = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1", default-features = true }
serde_json = "1"

tauri = { version = "2", features = ["devtools"] }

notify = "6"

tempfile = "3"

toml = "0.8"

tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-reify = { path = "tree-sitter-reify" }

tracing = "0.1"
