[workspace]
resolver = "2"
members = [
    "crates/reify-core",
    "crates/reify-expr",
    "crates/reify-syntax",
    "crates/reify-compiler",
    "crates/reify-eval",
    "crates/reify-fdm",
    "crates/reify-gcode",
    "crates/reify-mesh-morph",
    "crates/reify-constraints",
    "crates/reify-doc",
    "crates/reify-doc-build",
    "crates/reify-geometry",
    "crates/reify-kernel-fidget",
    "crates/reify-kernel-gmsh",
    "crates/reify-kernel-manifold",
    "crates/reify-kernel-occt",
    "crates/reify-kernel-openvdb",
    "crates/reify-solver-elastic",
    "crates/reify-shell-extract",
    "crates/reify-config",
    "crates/reify-runtime",
    "crates/reify-stdlib",
    "crates/reify-lsp",
    "crates/reify-mcp",
    "crates/reify-cli",
    "crates/reify-audit",
    "crates/reify-ast",
    "crates/reify-ir",
    "crates/reify-build-utils",
    "crates/reify-test-support",
    "tree-sitter-reify",
    "gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
reify-core = { path = "crates/reify-core" }
reify-expr = { path = "crates/reify-expr" }
reify-syntax = { path = "crates/reify-syntax" }
reify-compiler = { path = "crates/reify-compiler" }
reify-eval = { path = "crates/reify-eval" }
reify-fdm = { path = "crates/reify-fdm" }
reify-gcode = { path = "crates/reify-gcode" }
reify-mesh-morph = { path = "crates/reify-mesh-morph" }
reify-constraints = { path = "crates/reify-constraints" }
reify-doc = { path = "crates/reify-doc" }
reify-doc-build = { path = "crates/reify-doc-build" }
reify-geometry = { path = "crates/reify-geometry" }
reify-kernel-fidget = { path = "crates/reify-kernel-fidget" }
reify-kernel-gmsh = { path = "crates/reify-kernel-gmsh" }
reify-kernel-manifold = { path = "crates/reify-kernel-manifold" }
reify-kernel-occt = { path = "crates/reify-kernel-occt" }
reify-kernel-openvdb = { path = "crates/reify-kernel-openvdb" }
reify-solver-elastic = { path = "crates/reify-solver-elastic" }
reify-shell-extract = { path = "crates/reify-shell-extract" }
reify-config = { path = "crates/reify-config" }
reify-runtime = { path = "crates/reify-runtime" }
reify-stdlib = { path = "crates/reify-stdlib" }
reify-lsp = { path = "crates/reify-lsp" }
reify-mcp = { path = "crates/reify-mcp" }
reify-audit = { path = "crates/reify-audit" }
reify-ast = { path = "crates/reify-ast" }
reify-ir = { path = "crates/reify-ir" }
reify-build-utils = { path = "crates/reify-build-utils" }
reify-test-support = { path = "crates/reify-test-support" }

xxhash-rust = { version = "0.8", features = ["xxh3"] }
strum = { version = "0.26", features = ["derive"] }

bincode = "=1.3" # wire-format pin: see ELASTIC_RESULT_FORMAT_VERSION docs; bumping minor requires FORMAT_VERSION bump
bytemuck = "1"

im = "15"
indexmap = "2"
inventory = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1", default-features = true }
serde_json = "1"

tauri = { version = "2", features = ["devtools"] }

notify = "6"

tempfile = "3"

tar = "0.4"

toml = "0.8"

zstd = "0.13"

# 3MF export: Stored/no-compression for byte-determinism; default-features=false
# drops deflate/bzip2/time C-deps for pure-Rust wasm-safe build (task 4286).
zip = { version = "2", default-features = false }

tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-reify = { path = "tree-sitter-reify" }

tracing = "0.1"

# Sparse linear algebra for FEA assembly + CG solver pipeline
# (PRD docs/prds/v0_3/structural-analysis-fea.md task #9). We disable
# the default `rayon` feature because the project uses `std::thread::scope`
# for ad-hoc parallelism (matches reify-kernel-occt and reify-test-support);
# `npy`, `rand`, and `linalg` are unused by the assembly primitive.
faer = { version = "0.24", default-features = false, features = ["std", "sparse"] }

# ---------------------------------------------------------------------------
# Lean debuginfo for dev and test binaries (task 4450, PRD §9 β / §12 Q2)
#
# Problem: Linux default split-debuginfo = "off" embeds full DWARF into EACH
# of ~745 dev/test binaries, duplicating dependency debug data across every
# binary → fat target/ directory + slower links.
#
# Mechanism: split-debuginfo = "unpacked" moves each compilation unit's DWARF
# into a companion .dwo file instead of embedding it in the ELF binary.
# Effect: (A) link input shrinks (linker no longer has to merge DWARF from all
# object files into the final binary), (B) dependency debug data is shared
# across binaries rather than duplicated (one .dwo per .rlib TU, not per
# binary), so target/ shrinks substantially. Backtraces still resolve
# file:line via split-DWARF symbolication — verified by the
# crates/reify-test-support/tests/debuginfo_backtrace.rs integration test.
#
# Fallback (PRD §12 Q2): if split-DWARF symbolication degrades on the host
# (debuginfo_backtrace test goes RED), switch to debug = 1 (line-tables-only,
# embedded) instead. debug = 1 guarantees file:line and still shrinks vs
# debug = 2 (full), though less than unpacked. The posture test in
# tests/infra/test_lean_debuginfo_profile.sh covers both branches.
#
# Coverage: `test` profile inherits `dev`, so this one table trims BOTH the
# dev binaries (reify, reify-audit) AND all ~745 inherited test binaries —
# maximal target/ shrink, matching PRD "dev tests" intent. wasm/non-Linux dev
# builds treat split-debuginfo = "unpacked" as benign / no-op.
[profile.dev]
split-debuginfo = "unpacked"

# ---------------------------------------------------------------------------
# Debug-profile optimisation for heavy numeric dependencies (task 4055)
#
# faer 0.24's Lanczos + dense gevd paths are ~500–1000× slower in unoptimised
# debug builds than in release.  Two mechanisms are at play:
#
# (1) External crate kernels (faer-traits, gemm, gemm-common, gemm-f64, pulp,
#     nano-gemm) contain SIMD loops that are pathological without optimisation.
#     Fixed by [profile.dev.package."*"] opt-level = 3 + assertion disables
#     (faer's own debug_assertions are also expensive in these tight kernels).
#
# (2) faer exposes generic functions (e.g. gevd_real<T: RealField>) that are
#     monomorphised at the CALL SITE in reify-solver-elastic.  Cargo's "*"
#     wildcard matches only dependency packages, NOT the root package being
#     compiled; so the monomorphised QZ inner loops run at opt-level = 0 and
#     remain ~220× slower than release even after (1).  Fixed by per-crate
#     override on reify-solver-elastic (opt-level = 2 — enables vectorisation
#     while preserving debug symbols and debuggability for non-numeric code).
#     debug-assertions and overflow-checks are intentionally left at their dev
#     defaults (true) here so that reify-solver-elastic's own debug_assert!
#     invariants and overflow detection remain active during ordinary dev builds.
#
# Measured (task 4055):
#   before fix        — release: 0.64 s, debug (ignored): 300–540 s
#   "*" opt-level=3   — Lanczos path: ~0.09 s; dense gevd (n=80): ~137 s
#   "*" + assertions=false — dense gevd: still ~137 s (monomorphised in ws crate)
#   + reify-solver-elastic opt=2 — dense gevd <5 s; full suite <60 s ← target
#
# Cold-build note: the first `cargo build` after adding these tables recompiles
# all dependencies at opt-level=3, which takes longer than a normal debug build.
# Subsequent builds are fast (sccache amortises the cost across all worktrees).
#
# A debug-perf regression most likely means one of these tables was removed or
# the opt-level on reify-solver-elastic was reset to 0.
# ---------------------------------------------------------------------------
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.dev.package.reify-solver-elastic]
opt-level = 2
