[package]
name = "tree-sitter-reify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter grammar for the Reify CAD language"
build = "build.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter.workspace = true
tempfile = "3"

[build-dependencies]
cc = "1"
