[package]
name = "reify-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parsed expression/type AST for Reify (Phase 2 of docs/prds/core-ast-ir-layering.md task δ)"

[dependencies]
reify-core.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
# kept for future AST-serde derives; currently a no-op pass-through
serde = ["dep:serde", "reify-core/serde"]

[dev-dependencies]
serde_json = "1"
