[package]
name = "reify-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reify architecture audit forensics — phantom-done detector and related checks (see docs/architecture-audit/f-infra-design.md)"

[features]
# Exposes MockGitOps and friends to integration tests / downstream consumers.
# Activated automatically when this crate is pulled into its own
# [dev-dependencies] entry below (standard self-test pattern).
test-support = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# rusqlite: first SQLite use in the workspace. `bundled` avoids depending on
# system libsqlite3-dev — matches the workspace's `tempfile`/`zstd` posture
# of pinning self-contained deps to keep builds deterministic across distros.
rusqlite = { version = "0.31", features = ["bundled"] }
# ureq: sync HTTP client for the production fused-memory MCP loader. Stays
# behind `default-features = false` so we don't pull native-tls — the only
# endpoint is localhost (HTTP). See `crates/reify-audit/src/fused_memory_client.rs`.
ureq = { version = "2.10", default-features = false, features = ["json"] }
# reify-test-support: promoted from dev-dep so production ptodo.rs::check can
# call reify_test_support::ignore_hygiene::extract_ignore_reason (§8.3 γ lane).
# Acyclic: reify-test-support depends on reify-ast/core/ir/syntax/compiler —
# none of which depend on reify-audit. PRD §4/§8.3/§10 sanction this direction.
# Build-graph note: the transitive compiler-stack deps inflate the audit binary's
# build graph. This cost was weighed against extracting extract_ignore_reason into
# a new dep-free leaf crate; the alternative was declined because the function is
# ~15 lines, a new crate adds more ceremony than it saves, and the PRD explicitly
# chose reuse. Re-evaluate if reify-test-support's deps grow significantly.
reify-test-support.workspace = true

[[bin]]
name = "reify-audit"
path = "src/bin/reify-audit.rs"

[dev-dependencies]
tempfile.workspace = true
reify-test-support.workspace = true
# Self-pull with the test-support feature so integration tests in tests/p5.rs
# can construct MockGitOps. Standard Rust pattern for integration-test-visible
# test doubles that should NOT pollute the production public API.
reify-audit = { path = ".", features = ["test-support"] }
