[package]
name = "reify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for Reify"

[[bin]]
name = "reify"
path = "src/main.rs"

[dependencies]
reify-types.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-eval.workspace = true
reify-constraints.workspace = true
reify-geometry.workspace = true
reify-kernel-occt.workspace = true
reify-stdlib.workspace = true
reify-lsp.workspace = true
reify-mcp.workspace = true
reify-doc.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
reify-test-support.workspace = true
