[package]
name = "reify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for Reify"
build = "build.rs"

[[bin]]
name = "reify"
path = "src/main.rs"

[build-dependencies]
reify-build-utils.workspace = true

[dependencies]
reify-core.workspace = true
reify-ir.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-eval.workspace = true
reify-constraints.workspace = true
reify-geometry.workspace = true
reify-kernel-occt.workspace = true
reify-kernel-manifold.workspace = true
reify-stdlib.workspace = true
reify-lsp.workspace = true
reify-mcp.workspace = true
reify-doc.workspace = true
reify-doc-build.workspace = true
reify-config.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tar.workspace = true
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reify-test-support.workspace = true
reify-kernel-openvdb.workspace = true
