[package]
name = "reify-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Name resolution and elaboration from ParsedModule to CompiledModule"

[dependencies]
reify-types.workspace = true
reify-syntax.workspace = true
indexmap.workspace = true
tracing.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
reify-expr.workspace = true
tempfile.workspace = true
strum = "0.26"
strum_macros = "0.26"
