[package]
name = "reify-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Name resolution and elaboration from ParsedModule to CompiledModule"

[features]
# Exposes `__validate_annotations_for_parity_test` to the integration test in
# tests/annotation_schema_registry_parity.rs. Activated automatically by this
# crate's own [dev-dependencies] self-pull below — never reaches downstream
# crates or production builds.
test-support = []

[dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
reify-syntax.workspace = true
reify-config.workspace = true
indexmap.workspace = true
tracing.workspace = true

[dev-dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
reify-test-support = { workspace = true, features = ["eval-helpers"] }
reify-eval.workspace = true
reify-expr.workspace = true
tempfile.workspace = true
# Self-pull with the test-support feature so the integration test in
# tests/annotation_schema_registry_parity.rs can call
# `__validate_annotations_for_parity_test`. Standard Rust pattern for
# integration-test-visible internal shims; keeps the symbol out of the
# production public API.
reify-compiler = { path = ".", features = ["test-support"] }
