[package]
name = "reify-constraints"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Constraint checking implementation for Reify"

[dependencies]
reify-core.workspace = true
reify-ir.workspace = true
reify-expr.workspace = true
reify-stdlib.workspace = true
argmin = "0.10"
argmin-math = { version = "0.4", features = ["ndarray_latest-nolinalg"] }
ndarray = "0.16"
tracing.workspace = true

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
reify-core.workspace = true
reify-ir.workspace = true
reify-compiler.workspace = true
reify-test-support.workspace = true
