[package]
name = "reify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Meaning-free primitive vocabulary for Reify (leaf crate per docs/prds/core-ast-ir-layering.md task γ)"

[dependencies]
xxhash-rust.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
