[package]
name = "reify-doc-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compiler→doc-model lowering helpers for the reify doc tool"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reify-compiler.workspace = true
reify-doc.workspace = true
reify-types.workspace = true
reify-syntax.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
