[package]
name = "reify-doc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-data documentation model types for the reify doc tool"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
bincode = "1.3"
tempfile.workspace = true
