[package]
name = "reify-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine facade and evaluation loop for Reify"

[dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
reify-expr.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-shell-extract.workspace = true
reify-solver-elastic.workspace = true
bincode.workspace = true
bytemuck.workspace = true
inventory.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
xxhash-rust = { workspace = true }
rustc-hash = "2"
zstd.workspace = true
tempfile.workspace = true

[build-dependencies]
xxhash-rust = { workspace = true }

[features]
test-instrumentation = []

[dev-dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
# Self-dev-dep enables `test-instrumentation`-gated accessors (e.g. Engine::last_guard_phase_group_evals) in integration tests; see src/engine_admin.rs
reify-eval = { path = ".", features = ["test-instrumentation"] }
reify-test-support = { workspace = true, features = ["eval-helpers"] }
# v0.2 persistent-naming-v2 (task 2590): integration tests in `tests/`
# (e.g. topology_attribute_e2e.rs) drive `OcctKernelHandle::boolean_fuse_with_history`
# and feed the resulting `BooleanOpHistoryRecords` (a `reify-types` type) into
# `propagate_attributes_via_brepalgoapi_history`. Keeping reify-kernel-occt as a
# dev-dep — not a normal dep — prevents OCCT from being pulled into every
# transitive test compile of crates that dev-depend on `reify-test-support`
# with the `eval-helpers` feature, preserving `scripts/occt-touching-crates.txt`.
reify-kernel-occt.workspace = true
reify-constraints.workspace = true
reify-geometry.workspace = true
# Task 3843 (KCC-γ): integration tests in `kinematic_loop_closure_machinery.rs`
# call `reify_stdlib::loop_closure::{chain_transform, loop_residual_twist}` to
# verify the closed-chain residual at convergence on the planar e2e fixture.
reify-stdlib.workspace = true
# Task 3579 (PRD §5 B5 / I-3): T5 boundary tests in
# `tests/node_traits_boundary.rs` need `reify_runtime::concurrent::{
# SchedulerConfig, ConcurrentScheduler}` plus a tokio runtime. This is the
# usual cyclic-dev-dep pattern cargo permits — reify-runtime has reify-eval
# as a normal dep, and a dev-dep back from reify-eval applies only to
# reify-eval's own test binaries.
reify-runtime.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
