[package]
name = "reify-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine facade and evaluation loop for Reify"

[dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-config.workspace = true
reify-ir.workspace = true
reify-expr.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
reify-shell-extract.workspace = true
reify-solver-elastic.workspace = true
reify-kernel-openvdb.workspace = true
# Task 3786 (FDM δ): the fdm::as_printed_material_r_fast ComputeNode trampoline
# (compute_targets/as_printed_material.rs) wires γ (zone classifier) + β
# (correlation library) into the per-zone effective constants. reify-fdm is
# zero-dependency, so there is no cycle.
reify-fdm.workspace = true
# Task 3819 (Modal ζ): modal_ops.rs assembles K/M, extracts the free×free
# subspace as faer sparse matrices, and calls
# reify_solver_elastic::solve_eigen_shift_invert on the (K_free, M_free) pair
# (per the FEA-solve-in-reify-eval placement, design_decision #2). faer is
# already a workspace dep (used by reify-solver-elastic); naming it here is
# unavoidable because the solver crate exposes no public free-DOF projection
# helper or all-in-one modal kernel.
faer.workspace = true
# Promoted from [dev-dependencies] for task 3819: modal_ops.rs (library code,
# not just tests) reuses the pure scalar helpers in
# reify_stdlib::modal::free_vibration (eigenvalue_to_frequency_hz etc.). No
# dependency cycle — reify-stdlib does not depend on reify-eval (same direction
# as the existing transitive reify-eval -> reify-expr -> reify-stdlib edge).
reify-stdlib.workspace = true
bincode.workspace = true
bytemuck.workspace = true
inventory.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
xxhash-rust = { workspace = true }
rustc-hash = "2"
zstd.workspace = true
tempfile.workspace = true

[build-dependencies]
xxhash-rust = { workspace = true }
reify-build-utils.workspace = true

[features]
test-instrumentation = []
# unified-dag (task 4357 δ): gates ONLY the production activation of the
# `run_unified_pass` Kahn/Tarjan driver inside `Engine::build()` (via
# `BuildScheduler::from_env`). The `engine_fixpoint` module and
# `run_unified_pass` compile unconditionally so the cycle contract stays
# unit-testable without the flag; this empty feature flips the env gate from
# "always Legacy" to "UnifiedDag selectable via REIFY_BUILD_SCHEDULER".
unified-dag = []

[dev-dependencies]
reify-ast.workspace = true
reify-core.workspace = true
reify-ir.workspace = true
# Self-dev-dep enables `test-instrumentation`-gated accessors (e.g. Engine::last_guard_phase_group_evals) in integration tests; see src/engine_admin.rs
reify-eval = { path = ".", features = ["test-instrumentation"] }
reify-test-support = { workspace = true, features = ["eval-helpers"] }
# v0.2 persistent-naming-v2 (task 2590): integration tests in `tests/`
# (e.g. topology_attribute_e2e.rs) drive `OcctKernelHandle::boolean_fuse_with_history`
# and feed the resulting `BooleanOpHistoryRecords` (a `reify-types` type) into
# `propagate_attributes_via_brepalgoapi_history`. Keeping reify-kernel-occt as a
# dev-dep — not a normal dep — prevents OCCT from being pulled into every
# transitive test compile of crates that dev-depend on `reify-test-support`
# with the `eval-helpers` feature, preserving `scripts/occt-touching-crates.txt`.
reify-kernel-occt.workspace = true
reify-constraints.workspace = true
reify-geometry.workspace = true
# NOTE (task 3819): reify-stdlib was promoted to a normal [dependencies] entry
# above (modal_ops.rs uses it as library code). It remains available to the
# integration tests here — e.g. task 3843 (KCC-γ) tests in
# `kinematic_loop_closure_machinery.rs` call
# `reify_stdlib::loop_closure::{chain_transform, loop_residual_twist}`.
# Task 3579 (PRD §5 B5 / I-3): T5 boundary tests in
# `tests/node_traits_boundary.rs` need `reify_runtime::concurrent::{
# SchedulerConfig, ConcurrentScheduler}` plus a tokio runtime. This is the
# usual cyclic-dev-dep pattern cargo permits — reify-runtime has reify-eval
# as a normal dep, and a dev-dep back from reify-eval applies only to
# reify-eval's own test binaries.
reify-runtime.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
# Task 3035 (T22): shell↔tet MPC validation — dense LU solve requires faer;
# MPC row-elimination produces a NON-symmetric reduced matrix so CG (SPD-only)
# is wrong. faer is a workspace dep; reify-eval currently lacks it.
faer = { workspace = true }
# Task 4049: strum dev-dep for `use strum::IntoEnumIterator` in the
# classifier-completeness test (test d / PRD §9 Q10).  reify-ir is already a
# reify-eval dev-dep, so `reify_ir::Operation::iter()` is reachable; the trait
# `IntoEnumIterator` lives in `strum`, which is why strum must also appear here.
strum.workspace = true
# Task 3565: stdlib_doc_surface integration test calls build_stdlib_doc_model
# (reify-doc-build) + render_html_pages (reify-doc) directly as a library test.
# No dependency cycle: reify-doc-build depends on reify-compiler/reify-doc but
# NOT on reify-eval.
reify-doc.workspace = true
reify-doc-build.workspace = true
# Task 3437 (ζ): engine integration test for the Manifold execute arm.
# Links the REAL Manifold kernel (its unconditional `inventory::submit!` fires
# in the new test binary) and exposes the `test-fixtures` `unit_cube_manifold`
# helper for the item-3 probe B non-degeneracy assertion. No dependency cycle:
# reify-kernel-manifold depends on reify-ir/reify-core, NOT on reify-eval.
#
# DEAD-STRIP INVARIANT: the Manifold rlib is only linked into test binaries
# that contain an explicit linker anchor referencing a manifold symbol (see
# `manifold_cross_kernel_real.rs` — it calls
# `reify_kernel_manifold::register::manifold_capability_descriptor()`).
# Binaries that reference no manifold symbol have the rlib dead-stripped by
# the linker, so their `kernel_registry::registry()` stays occt-only and
# BRep-fallback assertions in other tests are unaffected.  DO NOT reference
# any `reify_kernel_manifold::*` symbol in other reify-eval unit or
# integration tests — doing so would silently pull in the Manifold
# `inventory::submit!` and break registry-size or default-kernel assertions
# that currently rely on only OCCT being registered.
reify-kernel-manifold = { workspace = true, features = ["test-fixtures"] }
