[package]
name = "reify-expr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Expression evaluator for Reify compiled expressions"

[dependencies]
reify-types.workspace = true
reify-stdlib.workspace = true

[dev-dependencies]
reify-test-support.workspace = true
reify-syntax.workspace = true
reify-compiler.workspace = true
